# ACVIEmblemCreator

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
gui/: CMakeLists.txt
gui/src/: AsyncTask.h  BatchRenderer.cpp  BatchRenderer.h  ChromaKey.cpp  ChromaKey.h  Define.h  EmblemImport.cpp  EmblemImport.h  EmblemImporter.cpp  EmblemImporter.h  Generator.cpp  Generator.h  ImageLoader.cpp  ImageLoader.h  PlatformHelpers.cpp  PlatformHelpers.h  RenderPrim.cpp  RenderPrim.h  json.h  main.cpp  resource.rc
libEmblem/: CMakeLists.txt
libEmblem/include/: BinaryReader.h  BinaryWriter.h  Crypto.h  Emblem.h  Error.h  ScopeExit.h  Serialization.h  UserData.h  libEmblem.h
libEmblem/src/: ACVI_EmblemImporter.cpp  BinaryReader.cpp  BinaryReader.h  BinaryWriter.cpp  BinaryWriter.h  BlockContainer.cpp  BlockContainer.h  BlockContainerBuilder.cpp  BlockContainerBuilder.h  Checksum.cpp  Checksum.h  Compression.cpp  Compression.h  Crypto.cpp  Crypto.h  DateTime.cpp  DateTime.h  Emblem.cpp  Emblem.h  EmblemImporter.cpp  EmblemImporter.h  Error.cpp  Hash.cpp  Hash.h  Serialization.h  UserData.cpp  UserData.h  UserData7.cpp  json.h  md5.cpp  md5.h  resource.rc
src/: ACVI_EmblemImporter.cpp  BinaryWriter.cpp  BinaryWriter.h  BlockContainerBuilder.h  Emblem.cpp  Emblem.h  Error.cpp  Error.h  ScopeExit.h  UserData7.cpp  UserData7.h  aes.c  aes.h  resource.rc
template/: EMBC.bt
